gtest = dependency('gtest', main: true)

test(
    'MyThreadTest',
    executable(
        'MyThreadTest',
        sources: ['MyThreadTest.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)

test(
    'MergeSortTest',
    executable(
        'MergeSortTest',
        sources: ['MergeSortTest.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)
