gtest = dependency('gtest', main: true)
test(
    'merge_sort',
    executable(
        'merge_sort_test',
        sources: ['MergeSortTest.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)
test(
    'MyIteratorTest',
    executable(
        'MyIteratorTest',
        sources: ['MyIteratorTest.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
    )
test(
    'PersonAccountTest',
    executable(
        'PersonAccountTest',
        sources: ['PersonAccountTest.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)
