gtest = dependency('gtest', main: true)

test(
    'MyMessage',
    executable(
        'MyMessage_test',
        sources: ['3/MyMessageTest.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)
test(
    'MyCat',
    executable(
        'MyCat_test',
        sources: ['3/MyCatTest.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)
test(
    'MyTie',
    executable(
        'MyTie_test',
        sources: ['3/MyTieTest.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)

test(
    'MyMatrixTestWhereMethodDataProvider',
    executable(
        'MyMatrixTestWhereMethodDataProvider',
        sources: ['4/MyMatrixTestWhereMethodDataProvider.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)

test(
    'MyMatrixTestIsSymmetricMethodDataProvider',
    executable(
        'MyMatrixTestIsSymmetricMethodDataProvider',
        sources: ['4/MyMatrixTestIsSymmetricMethodDataProvider.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)

test(
    'GuardTest',
    executable(
        'GuardTest',
        sources: ['4/GuardTest.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)

test(
    'merge_sort',
    executable(
        'merge_sort_test',
        sources: ['5/MergeSortTest.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)
test(
    'MyIteratorTest',
    executable(
        'MyIteratorTest',
        sources: ['5/MyIteratorTest.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
    )
test(
    'PersonAccountTest',
    executable(
        'PersonAccountTest',
        sources: ['5/PersonAccountTest.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)

test(
    'ln80cBufferTest',
    executable(
        'ln80cBufferTest',
        sources: ['7/ln80cBufferTest.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)

test(
    'MergeSortTest',
    executable(
        'MergeSortTest',
        sources: ['8/MergeSortTest.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)